--- a/gemeenteStyle.css
+++ b/gemeenteStyle.css
@@ -1,6 +1,4 @@
-body{
-    background-color: #F0F8FF;
-}
+
 
 a {
     text-decoration: none;
@@ -23,6 +21,24 @@ a {
     padding: 5px;
 }
 
+#stad{
+    width: 950px;
+    height: 400px;
+    padding: 20px;
+}
+
+.image{
+    text-align: center;
+}
+
+.footer_rotterdam{
+    float: right;
+}
+
+.contact{
+    float: left;
+}
+
 footer{
     font-size: 21px;
     background-color: green;
@@ -31,8 +47,8 @@ footer{
     text-align: center;
     position: absolute;
     bottom: 0;
-    left: 7px;
-    right: 7px;
+    left: 0px;
+    right: 0px;
     height: auto;
     padding: 20px;
 }
