--- a/gemeenteStyle.css
+++ b/gemeenteStyle.css
@@ -1,5 +1,3 @@
-
-
 a {
     text-decoration: none;
     color: #333;
@@ -37,6 +35,8 @@ a {
 
 .contact{
     float: left;
+    font-size: small;
+
 }
 
 footer{
@@ -50,5 +50,56 @@ footer{
     left: 0px;
     right: 0px;
     height: auto;
-    padding: 20px;
+    padding: 10px;
 }
+
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: Montserrat;
+}
+
+nav{
+    background: white;
+    height: 80px;
+    width: 100%;
+}
+
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a{
+    color: black;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+
+a.active,a:hover{
+    background: lightgray;
+    transition: .5s;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: lightgray;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+}
+
