--- a/gemeenteStyle.css
+++ b/gemeenteStyle.css
@@ -22,7 +22,7 @@ a {
 #stad{
     width: 950px;
     height: 400px;
-    padding: 20px;
+
 }
 
 .image{
@@ -76,3 +76,26 @@ nav{
 p{
     text-align: center;
 }
+
+.leftwords{
+    float: left;
+}
+
+@media screen and (max-width: 600px) {
+    footer{
+        font-size: 25px;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1023px) {
+    footer {
+        font-size: 30px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+   footer  {
+       font-size: 35px;
+   }
+}
+
